<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/nav_history"
            android:title="@string/nav_history"
            android:icon="@drawable/ic_histoty"/>

        <item android:id="@+id/nav_profile"
            android:title="@string/nav_profile"
            android:icon="@drawable/ic_profile"/>

    </group>

    <item android:title="@string/nav_contact">
        <menu>

            <item android:id="@+id/nav_contact"
                android:title="@string/nav_info"
                android:icon="@drawable/ic_email"/>
        </menu>
    </item>
</menu>